--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     font-weight: 400;
     font-style: normal;
 }
+
+
+
+/* Index */
 #body1 {
     display: flex;
     align-items: center;
@@ -12,11 +16,7 @@
     /* background-color:#0c225e; */
     background-color: rgb(28, 76, 33);
 }
-#body2 {
-    display: flex;
-    /* background-color:#0c225e; */
-    background-color: rgb(30, 87, 161);
-}
+
 
 .quadrado {
 
@@ -35,6 +35,14 @@
     color: #021347;
     font-size: 1.7rem;
 }
+.ulIndex {
+    padding: 0;
+    width: 100%;
+    height: 40%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 .ulIndex li {
     color: #021347;
     font-size: 1.2rem;
@@ -48,41 +56,92 @@
     justify-content: center;
     border-radius: 5px;
     cursor: pointer;
-    transition: 0.3s linear;
+    transition: 0.5s linear;
 
 }
 li:hover{
-    background-color: #9a4204;
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
-ul {
+
+
+
+/* financasPessoais */
+#body2 {
+    display: flex;
+    margin: 0;
     padding: 0;
+    background-image: url('fundo3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100%;
     width: 100%;
-    height: 40%;
+    gap: 1px;
+    overflow: hidden;
+}
+.barraLateralEsquerda {
+    width: 10%;
+    padding: auto;
+}
+.menuBar {
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding: auto;
 }
-.header{
-    position: absolute;
-    border: solid #b03b0d;
-    background-color: #b03b0d;
-    width: 100%;
-    height: 6%;
-    border-radius: 5px;
-    display: none;
+.mobile-menu {
+    background-color: rgb(116, 140, 161);
+    margin-top: 15%;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    display: flex;
     align-items: center;
+    justify-content: center ;
+    flex-direction: column;
+    padding: auto;
+    cursor: pointer;
+    position: relative;
+}
+.linha1, .linha2, .linha3 {
+    background-color: rgb(255, 255, 255);
+    height: 5%;
+    width: 80%;
+    margin: 3px;
+    transition: 0.5s;
+}
+.mobile-menu.active .linha1 {
+    position: absolute;
+    transform: rotate(-45deg);
+    margin:0;
+}
+.mobile-menu.active .linha2 {
+    opacity: 0;
+    margin: 0;
+}
+.mobile-menu.active .linha3 {
+    position: absolute;
+    transform: rotate(45deg);
+    margin:0;
+}
+.nav-list {
+    padding: 0;
+    height: 40%;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(-200%);
+    transition: transform 0.5s ease-in;
+}
+.nav-list.active {
+    transform: translate(0);
+}
+.nav-list li {
+    height: 30px;
+    cursor: pointer;
 }
 .back {
-    border: flex;
     border-radius: 4px;
-    margin: auto 2%;
-    height: 80%;
-}
-.menu {
-    position: relative;
-    
-}
-.menu:hover .header {
-    display: flex;
+    margin: auto;
 }
