--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ li:hover{
     display: flex;
     margin: 0;
     padding: 0;
-    background-image: url('fundo3.jpg');
+    background-image: url('fundo.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
