--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,15 @@ li:hover{
     gap: 1px;
     overflow: hidden;
 }
+input {
+    height: 1.2rem;
+    border-radius: 5px;
+    border: none;
+    background-color: gray;
+}
+input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button {
+    appearance: none;
+}
 .barraLateralEsquerda {
     width: 10%;
     padding: auto;
@@ -125,7 +134,9 @@ li:hover{
     margin:0;
 }
 .nav-list {
-    padding: 0;
+    background-color: rgba(116, 140, 161, 0.753);
+    border-radius: 3px;
+    padding: 15px;
     height: 40%;
     list-style: none;
     display: flex;
@@ -145,3 +156,28 @@ li:hover{
     border-radius: 4px;
     margin: auto;
 }
+.questions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    width: 65%;
+    height: 65%;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+.button {
+    margin: auto;
+    height: 30px;
+    width: 60px;
+    cursor: pointer;
+}
+
+.caixaPerguntas h3 {
+    text-align: center;
+    position: absolute;
+    display: none;
+}
+
+
